Changed the code to not log user-controlled data.
Issue-ID: VNFSDK-834

Signed-off-by: sharath reddy <bs.reddy@huawei.com>
Change-Id: I18f52715a254500bf36d2b2b61d11ea63763d2db